# FlappyBird-NDK

./: default.properties  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FlappyBird.cpp
app/src/main/cpp/Components/: Camera.h  GameObject.h  ParticleSystem.h
app/src/main/cpp/Core/: AudioManager.cpp  AudioManager.h  Game.cpp  Game.h  Matrix4.cpp  Scene.h  ShaderManager.cpp  TextureManager.cpp  TextureManager.h  Vector2.cpp
app/src/main/cpp/FlappyBirdGame/: Bird.cpp  Bird.h  Level.cpp  Level.h  MainMenu.cpp  MainMenu.h  PipePair.cpp
app/src/main/java/com/amu/flappybird/: GameActivity.java
app/src/main/res/menu/: game.xml
